[gd_scene load_steps=11 format=2]

[ext_resource path="res://script/porta.gd" type="Script" id=1]
[ext_resource path="res://assets/cenarios/porta 2.png" type="Texture" id=2]
[ext_resource path="res://sons/porta.mp3" type="AudioStream" id=3]
[ext_resource path="res://scenes/caixa_de_texto/caixa_Input.tscn" type="PackedScene" id=4]
[ext_resource path="res://script/caixa_senhas.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=4]
radius = 36.2215

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "abrir"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("audio_porta")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "fecha"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 36.3593

[node name="porta" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 29 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.98023e-08, 2.98023e-08 )
scale = Vector2( 1.67188, 1.67188 )
texture = ExtResource( 2 )
vframes = 4

[node name="anima_porta" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 1 )
anims/abrir = SubResource( 2 )
anims/fecha = SubResource( 3 )

[node name="audio_porta" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="chave_de_entrada" type="Area2D" parent="."]

[node name="caixa_Input" parent="chave_de_entrada" instance=ExtResource( 4 )]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="chave_de_entrada"]
position = Vector2( 1, 30 )
shape = SubResource( 5 )

[connection signal="body_entered" from="chave_de_entrada" to="." method="_on_chave_de_entrada_body_entered"]
[connection signal="body_entered" from="chave_de_entrada" to="chave_de_entrada/caixa_Input" method="_on_chave_de_entrada_body_entered"]
[connection signal="body_exited" from="chave_de_entrada" to="." method="_on_chave_de_entrada_body_exited"]
[connection signal="body_exited" from="chave_de_entrada" to="chave_de_entrada/caixa_Input" method="_on_chave_de_entrada_body_exited"]
