[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/caixa_de_texto/caixa_texto.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/porta.gd" type="Script" id=2]
[ext_resource path="res://scenes/caixa_de_texto/caixa_texto_senha.gd" type="Script" id=3]
[ext_resource path="res://sons/porta.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/cenarios/porta 2.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=4]
radius = 26.0

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "abrir"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("audio_porta")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "fecha"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0 ]
}

[node name="porta_sem_senha" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 15 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.98023e-08, 2.98023e-08 )
scale = Vector2( 1.67188, 1.67188 )
texture = ExtResource( 5 )
vframes = 4

[node name="anima_porta" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 1 )
anims/abrir = SubResource( 2 )
anims/fecha = SubResource( 3 )

[node name="audio_porta" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="caixa_texto" parent="." instance=ExtResource( 1 )]
script = ExtResource( 3 )

[connection signal="body_entered" from="." to="caixa_texto" method="_on_porta_body_entered"]
[connection signal="body_entered" from="." to="caixa_texto" method="_on_porta_sem_senha_body_entered"]
[connection signal="body_exited" from="." to="caixa_texto" method="_on_porta_body_exited"]
